Fixed some alignment issues

--- a/web/ui-app-v2/src/modules/citizen/PropertyTax/AssessmentFormWizard/index.scss
+++ b/web/ui-app-v2/src/modules/citizen/PropertyTax/AssessmentFormWizard/index.scss
@@ -1,3 +1,12 @@
-.container {position:fixed;}
+.flexbox-container {
+	display: -ms-flexbox;
+	display: -webkit-flex;
+	display: flex;
+	width:100vw;
+	position: fixed;
+	bottom: 0;
+}
 
-// .row {clear: both;}
+.flex-item {
+	width:50vw;
+}
